Add county constituency and ward registration
